create home route

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script src="/js/controllers.js"></script>
     <script src="/js/services.js"></script>
 </head>
-<body>
+<body ng-app="musicApp">
     <div class="container">
         <ui-view></ui-view>
     </div>
