--- a/public/html/musicresults.html
+++ b/public/html/musicresults.html
@@ -1,10 +1,6 @@
-<div class="media" ng-repeat="song in songs">
-    <div class="media-left">
-        <img class="media-object" ng-src="{{ song.coverimg }}">
-    </div>
-    <div class="media-body">
-        <h4 class="media-heading">{{ song.title }}</h4>
-        Artist: {{ song.artist.name }}
-        Genre: {{ song.genre }}
-    </div>
-</div>
+<ul>
+    <li ng-repeat="song in songs">
+        {{ song.track.name }} by {{ song.track.artists[0].name }}
+        <button class="btn btn-primary btn-sm" ng-click="playSong(song.track.preview_url)">Play Sample</button>
+    </li>
+</ul>
