--- a/public/index.html
+++ b/public/index.html
@@ -6,15 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Facial Recognition Music</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/facial-recognition/css/style.css">
     <script src="https://code.angularjs.org/1.5.5/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.0/angular-ui-router.min.js"></script>
-    <script src="/js/angular-spotify.min.js"></script>
+    <script src="/facial-recognition/js/angular-spotify.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.3/jquery.min.js"></script>
+    <script src="/facial-recognition/js/webcam.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-    <script src="/js/module.js"></script>
-    <script src="/js/controllers.js"></script>
-    <script src="/js/services.js"></script>
+    <script src="/facial-recognition/js/module.js"></script>
+    <script src="/facial-recognition/js/controllers.js"></script>
+    <script src="/facial-recognition/js/services.js"></script>
 </head>
 <body ng-app="musicApp">
     <div class="container">
