upload works on front-end

--- a/public/html/musicresults.html
+++ b/public/html/musicresults.html
@@ -1,6 +1,6 @@
 <div class="media" ng-repeat="song in songs">
     <div class="media-left">
-        <img class="media-object" ng-src="{{ song.coverimg }}">
+        <img class="media-object" ng-src="{{ song.covering }}">
     </div>
     <div class="media-body">
         <h4 class="media-heading">{{ song.title }}</h4>
