--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <title>Facial Recognition Music</title>
 
     <!-- BOOTSTRAP -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css">
 
     <!-- Custom Fonts -->
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -21,19 +21,26 @@
 
     <!-- SCRIPTS -->
 
-    <script src="https://code.angularjs.org/1.5.5/angular.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.0/angular-ui-router.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.3/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <script src="/bower_components/jquery/dist/jquery.min.js"></script>
+
+    <script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+
+    <script src="/bower_components/angular/angular.min.js"></script>
+    <script src="/bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
+
 
     <!-- Plugin JavaScript -->
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/classie/1.0.1/classie.js"></script>
-    <script src="js/cbpAnimatedHeader.js"></script>
+    <!-- <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script> -->
+    <!-- <script src="js/cbpAnimatedHeader.js"></script> -->
+
 
     <script src="/js/module.js"></script>
     <script src="/js/controllers.js"></script>
     <script src="/js/services.js"></script>
+
+    <script src="/js/facial-recognition.js"></script>
+
+
 </head>
 
 <body ng-app="musicApp">
@@ -49,7 +56,7 @@
                           <span class="icon-bar"></span>
                           <span class="icon-bar"></span>
                       </button>
-                      <a class="navbar-brand page-scroll" href="#page-top">Start Bootstrap</a>
+                      <a class="navbar-brand page-scroll" href="#page-top">App Name Here</a>
                   </div>
 
                   <!-- Collect the nav links, forms, and other content for toggling -->
@@ -59,20 +66,12 @@
                               <a href="#page-top"></a>
                           </li>
                           <li>
-                              <a class="page-scroll" href="#services">Services</a>
+                              <a class="page-scroll" href="#services">SIGN UP</a>
                           </li>
                           <li>
-                              <a class="page-scroll" href="#portfolio">Portfolio</a>
+                              <a class="page-scroll" href="#portfolio">LOGIN</a>
                           </li>
-                          <li>
-                              <a class="page-scroll" href="#about">About</a>
-                          </li>
-                          <li>
-                              <a class="page-scroll" href="#team">Team</a>
-                          </li>
-                          <li>
-                              <a class="page-scroll" href="#contact">Contact</a>
-                          </li>
+
                       </ul>
                   </div>
                   <!-- /.navbar-collapse -->
