--- a/public/index.html
+++ b/public/index.html
@@ -69,7 +69,7 @@
                               <a class="page-scroll" href="#services">SIGN UP</a>
                           </li>
                           <li>
-                              <a class="page-scroll" href="#portfolio">LOGIN</a>
+                              <a class="page-scroll" href="#sample-playlists">LOGIN</a>
                           </li>
 
                       </ul>
