--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,6 @@
     <title>Facial Recognition Music</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel="stylesheet" href="/facial-recognition/css/style.css">
-    <!-- BOOTSTRAP -->
-    <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css">
-    <!-- Custom Fonts -->
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
@@ -26,30 +23,8 @@
     <script src="/facial-recognition/js/services.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/classie/1.0.1/classie.js"></script>
-    <script src="js/cbpAnimatedHeader.js"></script>
-
-
-
-    <script src="/bower_components/jquery/dist/jquery.min.js"></script>
-
-    <script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-
-    <script src="/bower_components/angular/angular.min.js"></script>
-    <script src="/bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
-
-
-    <!-- Plugin JavaScript -->
-    <!-- <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script> -->
-    <!-- <script src="js/cbpAnimatedHeader.js"></script> -->
-
-
-    <script src="/js/module.js"></script>
-    <script src="/js/controllers.js"></script>
-    <script src="/js/services.js"></script>
-
-    <script src="/js/facial-recognition.js"></script>
-
-
+    <script src="/facial-recognition/js/cbpAnimatedHeader.js"></script>
+    <script src="/facial-recognition/js/facial-recognition.js"></script>
 </head>
 
 <body ng-app="musicApp">
