--- a/public/index.html
+++ b/public/index.html
@@ -5,26 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Facial Recognition Music</title>
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/facial-recognition/css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
+
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
+
     <script src="https://code.angularjs.org/1.5.5/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.0/angular-ui-router.min.js"></script>
-    <script src="/facial-recognition/js/angular-spotify.min.js"></script>
+    <script src="/js/angular-spotify.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.3/jquery.min.js"></script>
-    <script src="/facial-recognition/js/webcam.min.js"></script>
+    <script src="/js/webcam.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-    <script src="/facial-recognition/js/module.js"></script>
-    <script src="/facial-recognition/js/controllers.js"></script>
-    <script src="/facial-recognition/js/services.js"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/classie/1.0.1/classie.js"></script>
-    <script src="/facial-recognition/js/cbpAnimatedHeader.js"></script>
-    <script src="/facial-recognition/js/facial-recognition.js"></script>
+
+    <script src="/js/module.js"></script>
+    <script src="/js/controllers.js"></script>
+    <script src="/js/services.js"></script>
+
+    <!-- <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script> -->
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/classie/1.0.1/classie.js"></script> -->
+    <!-- <script src="/facial-recognition/js/cbpAnimatedHeader.js"></script> -->
+    <!-- <script src="/facial-recognition/js/facial-recognition.js"></script> -->
 </head>
 
 <body ng-app="musicApp">
