fiddling with some alignment issues

--- a/public/html/getphoto.html
+++ b/public/html/getphoto.html
@@ -61,6 +61,9 @@
 
 <style>
     body {
+
+      padding-top: 65px;
+
         background: #F09819;
         /* fallback for old browsers */
         background: -webkit-linear-gradient(to left, #F09819, #EDDE5D);
