--- a/public/html/home.html
+++ b/public/html/home.html
@@ -261,7 +261,7 @@
 
                             <div class="col-lg-12 text-center">
 
-                                <div ng-if "mood"> <span style="font-size: 2em; color: #FFFFFF; font-family: arial">Your Mood is: {{mood}} </span></div>
+                                <div> <span style="font-size: 2em; color: #FFFFFF; font-family: arial">Your Mood is: {{mymood1}} </span></div>
 
                                 <br>
 
