--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <title>Facial Recognition Music</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/facial-recognition/css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
@@ -17,14 +17,14 @@
 
     <script src="https://code.angularjs.org/1.5.5/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.0/angular-ui-router.min.js"></script>
-    <script src="/facial-recognition/js/angular-spotify.min.js"></script>
+    <script src="/js/angular-spotify.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.3/jquery.min.js"></script>
-    <script src="/facial-recognition/js/webcam.min.js"></script>
+    <script src="/js/webcam.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
-    <script src="/facial-recognition/js/module.js"></script>
-    <script src="/facial-recognition/js/controllers.js"></script>
-    <script src="/facial-recognition/js/services.js"></script>
+    <script src="/js/module.js"></script>
+    <script src="/js/controllers.js"></script>
+    <script src="/js/services.js"></script>
 
 
 </head>
@@ -42,7 +42,7 @@
                           <span class="icon-bar"></span>
                           <span class="icon-bar"></span>
                       </button>
-                      <a class="navbar-brand page-scroll" href="#page-top">App Name Here</a>
+                      <a class="navbar-brand page-scroll" href="#page-top">Janus</a>
                   </div>
 
                   <!-- Collect the nav links, forms, and other content for toggling -->
