its so late guyysss

--- a/public/html/musicresults.html
+++ b/public/html/musicresults.html
@@ -16,8 +16,8 @@
 </div>
 
 <style>
-
 body {
+  color: #fff;
     padding-top: 65px;
     background: #F09819;
     /* fallback for old browsers */
@@ -27,14 +27,3 @@ body {
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 </style>
-
-<!-- <pre>
-    Your current mood is {{ currentMood }}. Here are your song suggestions.
-</pre>
-
-<ul>
-    <li ng-repeat="song in songs">
-        {{ song.track.name }} by {{ song.track.artists[0].name }}
-        <button class="btn btn-primary btn-sm" ng-click="playSong(song.track.preview_url)">Play Sample</button>
-    </li>
-</ul> -->
