--- a/public/html/home.html
+++ b/public/html/home.html
@@ -52,7 +52,7 @@
         <div class="row">
             <div class="col-lg-12 text-center">
                 <h2 class="section-heading">SAMPLE PLAYLISTS</h2>
-                <h3 class="section-subheading text-muted">See mood and playlist pairings for famous faces</h3>
+                <h3 class="section-subheading text-muted"> <span style="color:gray">See mood and playlist pairings for famous faces </span> </h3>
             </div>
         </div>
         <div class="row">
@@ -239,6 +239,7 @@
                 <div id="demoForm">
                     <div class="row">
                         <div class="col-md-6">
+                          <div> <span style="color: white; font-size: 1.25em; text-align: center;">Copy and Paste an Image URL</span> </div>
                             <div class="form-group">
                                 <input type="text" class="form-control" placeholder="Image URL *" id="img-url">
                             </div>
@@ -249,6 +250,8 @@
                                 <div id="success"></div>
                                 <button type="submit" class="btn btn-xl">Image URL</button>
 
+                                <br>
+                                <br>
                                 <br>
 
                                 <input type="file" id="filename" name="filename">
@@ -261,7 +264,7 @@
 
                             <div class="col-lg-12 text-center">
 
-                                <div> <span style="font-size: 2em; color: #FFFFFF; font-family: arial">Your Mood is: {{testThis}} </span></div>
+                                <div> <span style="font-size: 2em; color: #FFFFFF; font-family: arial">Your Mood is: {{emotionsArr}} </span></div>
 
                                 <br>
 
