--- a/public/html/getphoto.html
+++ b/public/html/getphoto.html
@@ -40,9 +40,23 @@
             <h1 class="getPhotoHeader">Get My Playlist</h1>
             <p class="lead">Once you've snapped it, you can get your customized playlist</p>
 
-            <div class="my-playlist-wrapper">
-              <button type="button" class="btn-primary my-playlist-button" id="getMood">My Mood Playlist</button>
-            </div>
+<!-- RADIO -->
+
+<form>
+
+  <div class="controls">
+      <h1>Radio Boxes</h1>
+    <input id='random-option' type="radio" name='r-group-1' checked='checked' ng-model = "option">
+    <label for="random">RANDOM</label>
+
+    <input id='personal-option' type="radio" name='r-group-1' ng-model = "username">
+    <label for="option">PERSONAL</label>
+  </div>
+
+</form>
+<!-- RADIO END -->
+
+
         </div>
     </div>
 
