--- a/public/html/getphoto.html
+++ b/public/html/getphoto.html
@@ -46,11 +46,14 @@
 
   <div class="controls">
       <h1>Radio Boxes</h1>
-    <input id='random-option' type="radio" name='r-group-1' checked='checked' ng-model = "option">
-    <label for="random">RANDOM</label>
+    <input id='random-option' type="radio" name='r-group-1' checked='checked' ng-model="option" value="random">
+    <label for="random-option">RANDOM</label>
 
-    <input id='personal-option' type="radio" name='r-group-1' ng-model = "username">
-    <label for="option">PERSONAL</label>
+    <input id='personal-option' type="radio" name='r-group-1' ng-model="option" value="personal">
+    <label for="personal-option">PERSONAL</label>
+
+      <input id="username" ng-model="username" type="text">
+      <label for="username">Spotify Username</label>
   </div>
 
 </form>
