--- a/public/html/getphoto.html
+++ b/public/html/getphoto.html
@@ -49,11 +49,16 @@
     <input id='random-option' type="radio" name='r-group-1' checked='checked' ng-model = "option">
     <label for="random">RANDOM</label>
 
-    <input id='personal-option' type="radio" name='r-group-1' ng-model = "username">
-    <label for="option">PERSONAL</label>
+    <h4>Spotify Username</h4>
+
+    <input id='personal-option' type="radio" name="r-group-1" >Your Username <input type="text" name="Spotify Username" />
   </div>
 
 </form>
+
+<div class="my-playlist-wrapper">
+             <button type="button" class="btn-primary my-playlist-button" id="getMood">My Mood Playlist</button>
+           </div>
 <!-- RADIO END -->
 
 
