still working on styles...not final

--- a/public/html/getphoto.html
+++ b/public/html/getphoto.html
@@ -1,71 +1,72 @@
-    <div class="container">
-        <div class="page-header">
-            <h1 class="getPhotoHeader">Snap A Pic</h1>
-            <p class="lead">Take a picture of your face to get your mood-based playlist</p>
-        </div>
-        <div class="row">
+<!-- JUMBOTRON START  -->
+<div class="jumbotron text-center splash">
+  <h1>SNAP A PIC</h1>
+</div>
+<!-- JUMBOTRON END -->
 
-            <div class="col-md-8">
-              <div class="centerBlock">
-                <div class = "video-header">
-                  Please Center Face in Camera
+<div class="container">
+    <div class="page-header">
+        <p class="lead">Take a picture of your face to get your mood-based playlist</p>
+    </div>
+    <div class="row">
+
+        <div class="col-md-8">
+            <div class="centerBlock">
+                <div class="video-header">
+                    Please Center Face in Camera
                 </div>
                 <br>
-                  <div id="my_camera"></div>
+                <div id="my_camera"></div>
                 <br>
-                  <form>
-                      <input type="button" class="btn-primary" value="Snap It" ng-click="take_snapshot()">
-                  </form>
-              </div>
+                <form>
+                    <input type="button" class="btn-primary" value="Snap It" ng-click="take_snapshot()">
+                </form>
             </div>
-            <!-- PREVIEW -->
+        </div>
+        <!-- PREVIEW -->
 
-            <div class="col-md-4">
+        <div class="col-md-4">
             <div class="box" id="Prev">
-                <b class = "video-header">Snap Preview...</b>
+                <b class="video-header">Snap Preview...</b>
                 <div id="results"></div>
             </div>
-            </div>
-
         </div>
 
-        <div class="box hidden" id="Saved">
-            <b>Saved</b><span id="loading"></span><img id="uploaded" src=""/>
-        </div>
     </div>
 
-
-    <div class="container">
-        <div class="page-header">
-            <h1 class="getPhotoHeader">Get My Playlist</h1>
-            <p class="lead">Once you've snapped it, you can get your customized playlist</p>
-
-<!-- RADIO -->
-
-<form>
-  <div class="controls">
-    <h1>Radio Boxes</h1>
-    <input id='random-option' type="radio" name='r-group-1' checked='checked' ng-model = "option">
-    <label for="random">RANDOM</label>
-    <h3>Spotify Username</h3>
-    <input id='personal-option' type="radio" name="r-group-1" >Your Username <input type="text" name="Spotify Username" />
-  </div>
-</form>
-
-<div class="my-playlist-wrapper">
- <button type="button" class="btn-primary my-playlist-button" id="getMood">My Mood Playlist</button>
+    <div class="box hidden" id="Saved">
+        <b>Saved</b><span id="loading"></span><img id="uploaded" src="" />
+    </div>
 </div>
-<!-- RADIO END -->
 
 
+<div class="container">
+    <div class="page-header">
+        <h1 class="getPhotoHeader">Get My Playlist</h1>
+        <p class="lead">Once you've snapped it, you can get your customized playlist</p>
+
+        <!-- RADIO -->
+
+        <form>
+            <div class="controls">
+                <h1>Radio Boxes</h1>
+                <input id='random-option' type="radio" name='r-group-1' checked='checked' ng-model="option">
+                <label for="random">RANDOM</label>
+                <h3>Spotify Username</h3>
+                <input id='personal-option' type="radio" name="r-group-1">Your Username
+                <input type="text" name="Spotify Username" />
+            </div>
+        </form>
+
+        <div class="my-playlist-wrapper">
+            <button type="button" class="btn-primary my-playlist-button" id="getMood">My Mood Playlist</button>
         </div>
+        <!-- RADIO END -->
     </div>
-
-
+</div>
 
 <style>
     body {
-      padding-top: 65px;
         background: #F09819;
         /* fallback for old browsers */
         background: -webkit-linear-gradient(to left, #F09819, #EDDE5D);
