--- a/public/html/home.html
+++ b/public/html/home.html
@@ -273,7 +273,7 @@
 
                             <span style="font-size: 1em; color: #FFFFFF; font-family: arial;">
                           <ul style="list-style-type: none;" ng-repeat="mood in emotionsArr">
-                              <li style="list-style-type: none;">{{mood[1]}} {{mood[0]}}0&#37; </li>
+                              <li style="list-style-type: none;">{{mood[1]}} {{mood[0]}}&#47;10</li>
                           </ul>
                           </span>
 
