design done-ish

--- a/public/html/home.html
+++ b/public/html/home.html
@@ -81,7 +81,7 @@
                 </a>
                 <div class="sample-playlists-caption">
                     <h4>Bruno Mars</h4>
-                    <p class="text-muted">?</p>
+                    <p class="text-muted">Surprise</p>
                 </div>
             </div>
             <div class="col-md-4 col-sm-6 sample-playlists-item">
@@ -149,8 +149,8 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2 class="section-heading">What Can Juno Do?</h2>
-                <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                <h2 class="section-heading">What Can Janus Do?</h2>
+                <h3 class="section-subheading text-muted">Gauge emotions based on facial recognition tech</h3>
             </div>
         </div>
         <div class="row">
@@ -158,65 +158,52 @@
                 <ul class="timeline">
                     <li>
                         <div class="timeline-image">
-                            <img class="img-circle img-responsive" src="img/about/1.jpg" alt="">
+                            <img class="img-circle img-responsive" src="img/about/party.png" alt="">
                         </div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>2009-2011</h4>
-                                <h4 class="subheading">Our Humble Beginnings</h4>
+                                <h4>Smart Parties</h4>
+                                <h4 class="subheading">No Need for a DJ</h4>
                             </div>
                             <div class="timeline-body">
-                                <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                <p class="text-muted">Generate a playlist based on the partygoers emotions</p>
                             </div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
                         <div class="timeline-image">
-                            <img class="img-circle img-responsive" src="img/about/2.jpg" alt="">
+                            <img class="img-circle img-responsive" src="img/about/cafe.png" alt="">
                         </div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>March 2011</h4>
-                                <h4 class="subheading">An Agency is Born</h4>
+                                <h4>Satisfy Patrons</h4>
+                                <h4 class="subheading">Great for Cafes and Restaurants</h4>
                             </div>
                             <div class="timeline-body">
-                                <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                <p class="text-muted">Say goodbye to music that annoys your patrons. Janus can tell you whether your playlist is working for your customers.</p>
                             </div>
                         </div>
                     </li>
                     <li>
                         <div class="timeline-image">
-                            <img class="img-circle img-responsive" src="img/about/3.jpg" alt="">
+                            <img class="img-circle img-responsive" src="img/about/person.png" alt="">
                         </div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>December 2012</h4>
-                                <h4 class="subheading">Transition to Full Service</h4>
+                                <h4>Home and Health</h4>
+                                <h4 class="subheading">Your own personal music picker</h4>
                             </div>
                             <div class="timeline-body">
-                                <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                <p class="text-muted">Track your mood in a fun way and keep track of your mental state</p>
                             </div>
                         </div>
                     </li>
+
                     <li class="timeline-inverted">
                         <div class="timeline-image">
-                            <img class="img-circle img-responsive" src="img/about/4.jpg" alt="">
-                        </div>
-                        <div class="timeline-panel">
-                            <div class="timeline-heading">
-                                <h4>July 2014</h4>
-                                <h4 class="subheading">Phase Two Expansion</h4>
-                            </div>
-                            <div class="timeline-body">
-                                <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
-                            </div>
-                        </div>
-                    </li>
-                    <li class="timeline-inverted">
-                        <div class="timeline-image">
-                            <h4>Be Part
-                                <br>Of Our
-                                <br>Story!</h4>
+                            <h4>Learn
+                                <br>More
+                                <br>Today</h4>
                         </div>
                     </li>
                 </ul>
@@ -267,7 +254,7 @@
                         <!-- RIGHT COLUMN -->
                         <div class="col-md-6 column-height-fix">
                             <div class="headerPlaceholder" ng-hide="currentImage">Your Mood Stats Here</div>
-                            <img class="round" ng-src={ {currentImage}}></img>
+                            <img class="round" ng-src={{currentImage}}></img>
                             <div class="emotion-demo-header" ng-show="currentImage"> <span style="font-size: 2em; color: #FFFFFF; font-family: arial"> Your Mood Scores </span></div>
                             <button class="redirect-btn" ng-show="currentImage" ui-sref='getphoto'>Get Your Playlist</button>
 
@@ -326,7 +313,7 @@
                     <div class="modal-body">
 
                         <!-- PLAYLIST START  -->
-                        <div class="top">HAPPY PLAYLIST</div>
+                        <div class="top">HAPPY PLAYLIST <img src="/img/new.png"></div>
                         <div class="centered-playlist">
                             <ul class>
                                 <li class="music">BREATHE CAROLINA | BLACKOUT</br>
@@ -410,7 +397,7 @@
                 <div class="col-lg-8 col-lg">
                     <div class="modal-body">
                         <!-- PLAYLIST START  -->
-                        <div class="top">? PLAYLIST</div>
+                        <div class="top">SURPRISE PLAYLIST</div>
                         <div class="centered-playlist">
                             <ul class>
                                 <li class="music">BREATHE CAROLINA | BLACKOUT</br>
