--- a/public/html/home.html
+++ b/public/html/home.html
@@ -313,7 +313,7 @@
                     <div class="modal-body">
 
                         <!-- PLAYLIST START  -->
-                        <div class="top">HAPPY PLAYLIST <img src="/img/new.png"></div>
+                        <div class="top">HAPPY PLAYLIST <img src="/facial-recognition/img/new.png"></div>
                         <div class="centered-playlist">
                             <ul class>
                                 <li class="music">BREATHE CAROLINA | BLACKOUT</br>
